# ColliderAgent

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
paper-reproduction/: README.md
paper-reproduction/1308.2209/: prompt_figure_3.md
paper-reproduction/1308.2209/ref/1308.2209/: DPY_arXiv2.tex
paper-reproduction/1605.02910/: README.md  prompt_figure_1.md  prompt_figure_10.md  prompt_figure_1_with_comments.md
paper-reproduction/1605.02910/paper/tex_source/: jhepversion.tex
paper-reproduction/1701.05379/: prompt_figure_8.md  prompt_figure_8_with_comment.md
paper-reproduction/1701.05379/paper/tex_source/: EPJC_V2.tex
paper-reproduction/1811.07920/: prompt_figure_3.md  prompt_figure_3_with_comments.md
paper-reproduction/1811.07920/1811.07920/: JAJ.bbl  JAJ.tex  definitions_notes.tex
paper-reproduction/1811.07920/analysis/hepdata/: table1.yaml
paper-reproduction/2005.06475/: prompt_figure_2.md
paper-reproduction/2005.06475/paper/tex_source/: LQ.tex
paper-reproduction/2103.02708/: prompt_figure_4.md  prompt_figure_4_with_comments.md
paper-reproduction/2103.02708/paper/2103.02708/: 00README.XXX  CMS_Funding_agencies.xlsx  EXO-19-019-authorlist.tex  EXO-19-019-authorlist.xml  EXO-19-019_temp.bbl  EXO-19-019_temp.tex  (+2 more)
paper-reproduction/2104.05720/: prompt_figure_11.md  prompt_figure_11_with_comment.md  prompt_figure_12.md  prompt_figure_12_with_comment.md
paper-reproduction/9909255/: README.md  prompt_figure_2.md  prompt_figure_2_with_comments.md
python-agent/: .env.example  .gitignore  CLI.py  README.md  __init__.py  agent.py  conftest.py  pyproject.toml  requirements.txt
python-agent/prompts/: feynrules_reference.md  madanalysis_reference.md  madgraph_reference.md
python-agent/templates/: classes_template.txt  lagrangian_template.txt  model_info_template.txt  parameters_template.txt
python-agent/tests/: conftest.py  test_e2e_pipeline.py  test_madgraph_tools.py  test_simulation_workflow.py
python-agent/tests/assets/: DiagonalCKM.rst  HillModel.fr  KK_graviton.fr  MG5_debug  Massless.rst  SM.fr  Wprime.fr  check_fr.wls  minimal_Zp.fr  top-philic_Zprime.fr
python-agent/tools/: __init__.py  feynrules_to_ufo.py  feynrules_validation.py  file_tools.py  madanalysis_tools.py  madgraph_tools.py  simulation_yaml_to_madgraph.py
python-agent/utils/: build_default_mappings.py  build_symbol_database.py  download_feynrules_models.py  madgraph_setup.py
scripts/: README.md  run_calchep_generation.py  run_demo.py  run_feynrules_validation.py  run_madanalysis_process.py  run_madgraph_compile.py  run_madgraph_launch.py  run_micromegas_calc.py  run_micromegas_compile.py  run_ufo_generation.py
scripts/ref/: __init__.py  wolfram_script_templates.py
src/agents/: collider-simulator.md  event-analyzer.md  model-generator.md  pheno-analyzer.md
src/blueprints/: README.md  madgraph-compile.yaml
src/images/: README.md
src/images/micromegas/: Dockerfile
src/skills/: README.md
src/skills/calchep-generator/: SKILL.md
src/skills/execution-summarizer/: SKILL.md
src/skills/feynrules-model-generator/: SKILL.md
src/skills/feynrules-model-validator/: SKILL.md
src/skills/madgraph-simulator/: SKILL.md
src/skills/micromegas-calculator/: SKILL.md
src/skills/pheno-pipeline-orchestrator/: SKILL.md
src/skills/reproduction-guide-generator/: SKILL.md
src/skills/ufo-generator/: SKILL.md
(+197 files in other folders)
