[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collider-agent"
version = "0.1.0"
description = "A Decoupled Architecture for Autonomous High-Energy Physics Phenomenology: Application to Collider Studies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shi Qiu"},
    {name = "Zeyu Cai"},
    {name = "Jiashen Wei"},
    {name = "Zeyu Li"},
    {name = "Yixuan Yin"},
    {name = "Qing-Hong Cao"},
    {name = "Chang Liu"},
    {name = "Ming-xing Luo"},
    {name = "Xing-Bo Yuan"},
    {name = "Hua Xing Zhu"},
]
keywords = [
    "high-energy-physics",
    "particle-physics",
    "collider-phenomenology",
    "feynrules",
    "madgraph",
    "madanalysis",
    "ai-agents",
    "claude-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "magnus-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/shiqiu/Collider-Agent"
Repository = "https://github.com/shiqiu/Collider-Agent"

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
